# payments_dodo

./: Cargo.toml  Dockerfile  Readme.md  docker-compose.yml
src/: main.rs
src/api/: balance.rs  transactions.rs  users.rs
src/config/: db.rs
src/models/: balance.rs  transactions.rs  users.rs
src/utilities/: auth.rs  errors.rs  utils.rs
