[package]
name = "payments_dodo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
sqlx = {version = "0.8.2" , features = ["runtime-tokio", "tls-native-tls","postgres","macros","chrono","rust_decimal","uuid"]}
tokio = "1.42.0"
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.134"
chrono = {version= "0.4.39",features = ["serde"]}
jsonwebtoken = "9.3.0"
futures-util = "0.3"
rust_decimal = { version="1.36", features = ["db-postgres"]}
rust_decimal_macros = "1.36"
uuid = { version = "1.3", features = ["v4","serde"] }